2003-10-30  Choe Hwanjin <krisna@kldp.org>
	* 텍스트 파일들의 인코딩을 UTF-8로 변환

2003-10-22  Choe Hwanjin <krisna@kldp.org>
	* src/ic.c,src/nabi.h,src/ui.c,src/server.h,src/server.c:
	  output_mode 옵션 추가 (syllable, jamo 가능)

2003-10-20  Choe Hwanjin <krisna@kldp.org>
	* src/ui.c: gcc 3.3.2 에서 strict alias warning 안나게

2003-10-19  Choe Hwanjin <krisna@kldp.org>
	* src/ic.c: unicode 범위의 keyval은 forwarding하지 않고 바로 commit 함

2003-10-15  Choe Hwanjin <krisna@kldp.org>
	* src/automata.c,src/handler.c,src/ic.c,src/ic.h: 한글자모 이외의
	  글자를 처리하는 루틴을 개선

2003-10-14  Choe Hwanjin <krisna@kldp.org>
	* release 0.9

2003-10-13  Choe Hwanjin <krisna@kldp.org>
	* src/ic.c,src/hangul.c,src/hangul.h,src/server.c:
	  XwcXXX 함수를 모두 Xutf8XXX 함수로 바꿈, UCS 코드를 UTF8 스트링으로
	  만드는 자체 루틴 추가, charset 체크에서도 WCHAR_T 대신 UTF-8
	  사용 (BSD 지원을 위해)
	  BSD 서버 사용을 지원해주신 Perky(http://openlook.org/)님께
	  감사드립니다.

2003-10-10  Choe Hwanjin <krisna@kldp.org>
	* src/ic.c: qt에서 한자 변환시 안보이던 문제 해결

2003-10-08  Choe Hwanjin <krisna@kldp.org>
	* release 0.8

2003-10-08  Choe Hwanjin <krisna@kldp.org>
	* src/automata.c: charset을 체크하는 부분을 더 추가
	  (ㅃㅞㄹㄱ의 경우 고려), 세벌식 자판에서도 charset 체크 강화
	* src/automata.c, src/server.h, src/server.c, src/ui.c: 각 키별로 눌린
	  횟수를 저장해두는 기능을 추가함(about 창에서 볼수 있음)

2003-10-01  Choe Hwanjin <krisna@kldp.org>
	* src/ic.c: XIMPreeditPosition 모드의 경우에는 commit한후에 preedit
	  clear 하도록 수정함(Eterm의 경우는 preedit string을 지우고 commit
	  해도 정상적으로 입력이 되지만, gtk+1 app의 경우는 입력순서가
	  뒤바뀌는 경우가 있어서 XIMPreeditPosition의 경우는 기존의 방식대로 
	  처리하도록 함, 따라서 XUnmapWindow()를 사용해도 입력순서에 영향을 
	  미치지 않음 #284)

2003-09-26  Choe Hwanjin <krisna@kldp.org>
	* release 0.7

2003-09-18  Choe Hwanjin <krisna@kldp.org>
	* src/ic.c: XIM spec에 맞게 preedit clear 한후 commit 함
	* src/handler.c: 한자 변환 기능을 "Hanja"키 말고 F9도 작동하게 함

2003-09-17  Choe Hwanjin <krisna@kldp.org>
	* src/ui.c: set default icon

2003-09-16  Choe Hwanjin <krisna@kldp.org>
	* release 0.6
	* src/session.c,src/main.c,src/ui.c: session 종료시 같이 종료

2003-09-14  Choe Hwanjin <krisna@kldp.org>